examen1compi1/Parser/tools/gramatica.txt
input -> stmlist ;
stmlist -> expr stmlistp
stmlistp -> ; expr stmp
expr -> term exprp
exprp -> + term exprp
exprp -> - term exprp
exprp -> * term exprp
exprp -> / term exprp
term -> factor termp
termp -> * factor termp
factor -> Number
factor -> Ident
factor -> ( expr )
